# address-book

./: .coverage  .gitignore  README.md  populate_sample_data.py  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: contacts.py  households.py  lists.py
app/templates/: index.html  lists.html
tests/: conftest.py  test_contacts.py  test_households.py  test_lists.py
